--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -39,6 +39,7 @@
     <zookeeper.version>3.9.2</zookeeper.version>
     <netty.version>4.1.108.Final</netty.version>
     <jetty-runner.version>9.3.20.v20170531</jetty-runner.version>
+    <bouncycastle.version>1.78</bouncycastle.version>
   </properties>
 
   <dependencies>
@@ -249,7 +250,16 @@
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk15on</artifactId>
+        </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk18on</artifactId>
+      <version>${bouncycastle.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.orc</groupId>
@@ -447,7 +457,8 @@
             </resolverFilter>
             <resolverFilter>
               <include>
-                *:libthrift,*:aircompressor,*:netty-*
+               *:libthrift,*:aircompressor,*:netty-*,
+                software.amazon.awssdk:*, *:bcprov-jdk18on
               </include>
               <exclude>
                 *:tests:*
