--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <zookeeper.version>3.9.2</zookeeper.version>
     <org.apache.hbase.thirdparty.version>2.1.0</org.apache.hbase.thirdparty.version>
     <safeyaml.version>1.34.1</safeyaml.version>
+    <jetty-hadoop.version>9.4.54.v20240208</jetty-hadoop.version>
   </properties>
 
   <dependencyManagement>
