--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -144,7 +144,7 @@
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
-      <version>0.9.3-1</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>org.pentaho</groupId>
