[PPP-5559] Exclude apache mina from dependencies; not needed at runtime.

--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -71,6 +71,12 @@
         <artifactId>jetty-jaas</artifactId>
         <version>${jetty.version}</version>
         <scope>runtime</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
