--- a/shims/cdpdc71/pom.xml
+++ b/shims/cdpdc71/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-list</artifactId>
-    <version>10.3.0.0-SNAPSHOT</version>
+    <version>10.3.0.0-243</version>
   </parent>
   <artifactId>pentaho-hadoop-shims-cdpdc71-reactor</artifactId>
   <packaging>pom</packaging>
