fix: add slf4j as test dependency

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -471,6 +471,12 @@
       <version>${org.mockito.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.curator</groupId>
