[BACKLOG-43098]-Fixing broken testcases as part of tomcat upgradation

--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -221,6 +221,12 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta.servlet.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
