[BACKLOG-43891] upgrading libthrift to 0.20.0 for apachevanilla, emr700 and dataproc shims

--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -703,7 +703,7 @@
               <include>
                 <!--Needed for Pig-->
                 *:antlr-runtime,*:automaton,*:pig,*:parquet-pig,*:sqoop,*:joda-time,*:jython,*:aircompressor,*:netty-*,
-                *:jackson-databind,*:jackson-core
+                *:jackson-databind,*:jackson-core,*:libthrift
               </include>
               <transitive>false</transitive>
             </resolverFilter>
