[BACKLOG-44478] - Exclude transitive dependencies brought in by hadoop-aws for apache driver

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -123,11 +123,6 @@
     </dependency>
     <dependency>
       <groupId>org.pentaho</groupId>
-      <artifactId>shim-bundle-plugin</artifactId>
-      <version>${shim-bundle-plugin.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.pentaho</groupId>
       <artifactId>shim-api</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -459,6 +454,12 @@
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>s3-transfer-manager</artifactId>
       <version>${awssdk.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
