[PPP-5643] Pretty old HBase-shaded-protobuf within HDI40 shim

--- a/shims/hdi40/pmr/pom.xml
+++ b/shims/hdi40/pmr/pom.xml
@@ -63,6 +63,10 @@
           <groupId>com.google.protobuf</groupId>
           <artifactId>protobuf-java</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.hbase.thirdparty</groupId>
+          <artifactId>hbase-shaded-protobuf</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
